Refactor code structure and remove redundant code blocks for improved readability and maintainability

--- a/biome.json
+++ b/biome.json
@@ -48,6 +48,12 @@
       "indentWidth": 2
     }
   },
+  "css": {
+    "parser": {
+      "cssModules": true,
+      "tailwindDirectives": true
+    }
+  },
   "files": {
     "includes": [
       "**",
@@ -55,7 +61,8 @@
       "!**/dist",
       "!**/.wrangler",
       "!**/*.min.js",
-      "!**/apps/web/src/components/ui"
+      "!**/apps/web/src/components/ui",
+      "!**/*.gen.ts"
     ]
   }
 }
