chore(infra): add Cloudflare Workers config and deployment tooling
- Update wrangler config with D1, Vectorize, Queues, and AI bindings
- Add provision script for automated infra setup
- Add secrets helper script
- Add secrets.example template
- Update package.json dependencies for both apps
- Ignore agent artifacts in .gitignore
- Remove placeholder worker entrypoint

--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -7,11 +7,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "elysia": "latest"
+    "better-auth": "latest",
+    "elysia": "latest",
+    "kysely": "latest",
+    "kysely-d1": "latest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "latest",
     "wrangler": "latest"
-  },
-  "module": "src/index.js"
+  }
 }
